--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
-    "twilio": "^5.7.0"
+    "twilio": "^5.7.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
