--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,36 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/kfar_marketplace
+DIRECT_DATABASE_URL=postgresql://user:password@localhost:5432/kfar_marketplace
 
-# SendGrid Configuration
-SENDGRID_API_KEY=your-sendgrid-api-key
-FROM_EMAIL=info@kfarmarket.com
-NOTIFICATION_EMAIL=info@kfarmarket.com
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Twilio Configuration
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_PHONE_NUMBER=your-twilio-phone-number
-TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
-TWILIO_WHATSAPP_FROM=whatsapp:+18147783568
+# ElevenLabs (Voice AI)
+NEXT_PUBLIC_ELEVENLABS_API_KEY=your_elevenlabs_api_key
 
-# ElevenLabs Configuration
-ELEVENLABS_API_KEY=your-elevenlabs-api-key
-ELEVENLABS_VOICE_ID=your-voice-id
+# Upstash Redis
+UPSTASH_REDIS_REST_URL=your_upstash_redis_url
+UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_token
 
-# OpenRouter Configuration
-OPENROUTER_API_KEY=your-openrouter-api-key
+# SendGrid (Email)
+SENDGRID_API_KEY=your_sendgrid_api_key
 
-# Admin Configuration
-ADMIN_EMAIL=admin@kfarmarket.com
-ADMIN_PASSWORD=your-secure-password
-ADMIN_TOKEN=your-admin-token
+# Twilio (WhatsApp)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_WHATSAPP_NUMBER=your_twilio_whatsapp_number
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Google AI
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_ai_key
 
-# Application Configuration
-NODE_ENV=production
+# OpenRouter (AI)
+OPENROUTER_API_KEY=your_openrouter_api_key
+
+# Replicate (AI)
+REPLICATE_API_TOKEN=your_replicate_token
+
+# API Configuration
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NODE_ENV=development
